Cans 867 ie comment accordion alignment fix (#365)
## JIRA

## Description
<!--- Provide a description with context for those that don't know what this pull request is about. -->

## Tests
<!--- Please indicate applicable tests -->
- [ ] I used TDD to develop the feature
- [x] I have included unit tests
- [ ] I have included new acceptance tests or modified existing ones
- [ ] I have included other tests

## Types of changes
<!--- What types of changes does your code introduce? Put an `x` in all the boxes that apply: -->
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Refactoring (No behavioral changes)
- [x] Bug fix (non-breaking change which fixes an issue)
- [ ] Breaking change (fix or feature that would cause existing functionality to not work as expected)

## Checklist:
<!--- Go over all the following points, and put an `x` in all the boxes that apply. -->
<!--- If you're unsure about any of these, don't hesitate to ask. -->
- [x] My code follows the code style of this project.
- [x] I ran all my tests locally which were green.
- [x] My code adds no new issues to Code Climate
- [x] I ran all the linters for the project.
- [x] My code is in a stable state ready to be deployable, but not necessarily complete.
- [x] I promise on my honor as a CWDS developer to ensure I don't break the build (or bring donuts if I leave things broken), to check linters, use best practices, to leave the code in better shape than I found it, and to have a good day.

Mostly style tweaks to make IE better understand things. The changes takes care of two issues currently being experienced in IE:

1. Domain Comment accordion header not aligning appropriately
2. Comment Icons not appearing on Domain toolbar

Bug 1 was the initial purpose for this PR but Bug 2 was found during the fix, so including the fix for it here as well. Please check out [https://osi-cwds.atlassian.net/browse/CANS-867](url) for details

--- a/app/javascript/Application/components/Assessment/style.sass
+++ b/app/javascript/Application/components/Assessment/style.sass
@@ -1,5 +1,6 @@
 @import '../../styles/global/colors.sass'
 $toolbar-comment-icon-right-margin: 2rem
+$item-confidential-label-height: 6.05rem
 //********************
 //AssessmentForm
 //********************
@@ -347,9 +348,14 @@ $toolbar-comment-icon-right-margin: 2rem
 //********************
 // DomainCommentIcon
 //********************
-.domain-toolbar-comment-icon
-  margin-right: $toolbar-comment-icon-right-margin
+.domain-toolbar-comment-icon-block
+  display: flex
+  width: 9rem
   margin-top: auto
+
+.domain-comment-accordion-comment-icon
+  height: $item-confidential-label-height
+
 //********************
 // Date picker
 //********************
